--- a/app/views/layouts/_topnavbar.html.haml
+++ b/app/views/layouts/_topnavbar.html.haml
@@ -10,7 +10,7 @@
     .col-md-11
       %ul.nav.navbar-top-links.navbar-right.col-md-12
         %li.col-md-10
-          %h1.text-center.hidden-xs{:style => "color: #ffffff"}
+          %h1.text-center.hidden-xs
             Communidadas Unidas
 
           - if signed_in?
