--- a/app/assets/stylesheets/base/skins.scss
+++ b/app/assets/stylesheets/base/skins.scss
@@ -6,7 +6,7 @@
 */
 
 // Main colors
-$skin-1-color: #0e9aef;
+$skin-1-color: #B81111; // old #0e9aef;
 $skin-1-nav-bg: #3e495f;
 $skin-1-a-color: #9ea6b9;
 $skin-1-page-bg: #f4f6fa;
