--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Clients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+/* Vehicle requirements
+*= require dataTables/datatables.min
+*= require jquery-ui/jquery-ui.min
+*= require jqGrid/ui.jqgrid
+*= require footable/footable.core
+*= require fullcalendar/fullcalendar
+*= require steps/jquery.steps
+*= require_self
+*/
