added step wizard javascript to new views

--- a/app/views/employees/index.html.haml
+++ b/app/views/employees/index.html.haml
@@ -3,7 +3,7 @@
     .col-lg-12
       .ibox.float-e-margins
         .ibox-title
-          = link_to new_event_path do
+          = link_to new_employee_path do
             %button.btn.btn-success{:type => "button"}
               %i.fa.fa-plus &nbsp;New
         .ibox-content
