--- a/app/assets/stylesheets/base/navigation.scss
+++ b/app/assets/stylesheets/base/navigation.scss
@@ -153,7 +153,7 @@
 .nav-header {
   padding: 33px 25px;
   background-color: $cu-main; //$nav-bg;
-  background-image: $nav-profile-pattern;
+  // background-image: $nav-profile-pattern;
 
 }
 
