--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
         -# Page wrapper
         = render 'layouts/topnavbar'
         -# Main view
-        #notifications
+        #notifications{:style => "margin-top: 20px;"}
           = render '/layouts/messages'
         = yield
         -# Footer
