--- a/app/views/layouts/_topnavbar.html.haml
+++ b/app/views/layouts/_topnavbar.html.haml
@@ -29,7 +29,7 @@
     %li
       = link_to root_path  do
         %span.fa.fa-home
-          = "#{current_user.role.capitalize} Dashboard"
+          -# = "#{current_user.role.capitalize} Dashboard"
       -# = render_breadcrumbs tag: :li, separator: ""
   -# .col-lg-7
   -#   .text-center.m-t-lg
