--- a/app/views/layouts/_topnavbar.html.haml
+++ b/app/views/layouts/_topnavbar.html.haml
@@ -24,12 +24,10 @@
                 %i.fa.fa-sign-in
                 Log in
 .row.wrapper.border-bottom.white-bg.page-heading{:style => "padding-top: 10px; padding-bottom;10px"}
-  -# %h2= content_for?(:title) ? yield(:title) : 'CU'
-  %ol.breadcrumb
-    %li
-      = link_to root_path  do
-        %span.fa.fa-home
-          -# = "#{current_user.role.capitalize} Dashboard"
+  %h2= content_for?(:title) ? yield(:title) : 'CU'
+  .col-lg-12
+    &nbsp;
+    %ol.breadcrumb
       -# = render_breadcrumbs tag: :li, separator: ""
   -# .col-lg-7
   -#   .text-center.m-t-lg
