--- a/app/views/contacts/_client_header.html.haml
+++ b/app/views/contacts/_client_header.html.haml
@@ -30,9 +30,11 @@
             .user-button
               .row
                 .col-md-8
-                  = link_to edit_contact_path(@contact), class: "btn btn-primary btn-sm btn-block" do
-                    %i.fa.fa-folder
-                      View
+                  %a.btn.btn-white.btn-xs.pull-right{:href => "#{edit_contact_path(@contact)}"} Edit Contact
+
+                  -# = link_to edit_contact_path(@contact), class: "btn btn-primary btn-sm btn-block" do
+                  -#   %i.fa.fa-folder
+                  -#     View
                   -# %button.btn.btn-primary.btn-sm.btn-block{:type => "button"}
                   -#   %i.fa.fa-edit
                   -#   Edit
